<resources>
    <string name="app_name" translatable="false">Eat &amp; Go</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="food_weight_text_view">Food</string>
    <string name="feeding_time_text_view">Time</string>

    <string name="grams">grams</string>
    <string name="grams_interval" translatable="false">50 > 300</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="hours_interval" translatable="false">01 – 24</string>

    <string name="change_current_pass">Current password</string>
    <string name="change_new_pass">New password</string>
    <string name="change_confirm_new_pass">Confirm new password</string>

    <string name="registration_email">Enter the email</string>
    <string name="registration_pass">Enter the password</string>
    <string name="registration_pass_again">Enter the password again</string>

    <string name="statistics_name">Type</string>
    <string name="statistics_food">food</string>
    <string name="statistics_water">water</string>
    <string name="statistics_weight">Weight</string>
    <string name="statistics_food_weight">food weight</string>
    <string name="statistics_water_weight">water weight</string>
    <string name="statistics_period">Period</string>
    <string name="statistics_date">Date</string>

    <string name="change_name">Change name</string>
    <string name="change_photo">Change photo</string>
    <string name="change_password">Change password</string>

    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="registration">Registration</string>

    <string name="schedule">Schedule</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="chart">Chart</string>
    <string name="information">Information</string>
    <string name="profile">"Pet's profile"</string>

    <string name="information_text">
        Eat &amp; Go\n
        \nVersion: 1.0
        \nEmail: eatandgo@.com
        \nTelephone: +38 (063) 777
    </string>
</resources>
