<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/actionScheduleItem"
        android:icon="@mipmap/ic_bone"
        android:orderInCategory="1"
        android:title="@string/schedule" />

    <item
        android:id="@+id/actionSettingsItem"
        android:icon="@mipmap/ic_settings"
        android:orderInCategory="2"
        android:title="@string/settings" />

    <item
        android:id="@+id/actionStatisticsItem"
        android:icon="@mipmap/ic_paw"
        android:orderInCategory="3"
        android:title="@string/statistics" />

    <item
        android:id="@+id/actionChartItem"
        android:icon="@mipmap/ic_chart_line"
        android:orderInCategory="4"
        android:title="@string/chart" />

    <item
        android:id="@+id/actionInfoItem"
        android:icon="@mipmap/ic_information_outline"
        android:orderInCategory="5"
        android:title="@string/info" />

    <item
        android:id="@+id/actionExitItem"
        android:icon="@mipmap/ic_close_octagon"
        android:orderInCategory="6"
        android:title="@string/exit" />
</menu>