<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_linear_layout_inner_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/grams_interval"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_linear_layout_inner_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/hours_interval"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/dialogGrams"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_linear_layout_inner_margin"
            android:layout_weight="1"
            android:background="@mipmap/substrate"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/grams"
            android:inputType="number"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/dialogHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_linear_layout_inner_margin"
            android:layout_weight="1"
            android:background="@mipmap/substrate"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/hours"
            android:inputType="number"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialogSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_linear_layout_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/submit"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/dialogDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_linear_layout_margin"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/delete"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</LinearLayout>