<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <TextView
        android:id="@+id/statisticsHeaderText"
        style="@style/FragmentsHeader"
        android:text="@string/statistics" />

    <LinearLayout
        android:id="@+id/statisticsMenuHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statisticsHeaderText"
        android:orientation="horizontal"
        android:background="@color/colorWhite">

        <TextView
            android:id="@+id/statisticsType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/statistics_name"
            android:textSize="@dimen/card_view_titles_text_size" />

        <TextView
            android:id="@+id/statisticsWeight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/statistics_weight"
            android:textSize="@dimen/card_view_titles_text_size" />

        <TextView
            android:id="@+id/statisticsTime"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/statistics_period"
            android:textSize="@dimen/card_view_titles_text_size" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/statisticsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statisticsMenuHeader"
        android:alpha="0.7"
        android:background="@color/colorWhite" />

    <TextView
        android:id="@+id/statisticsChart"
        style="@style/FragmentsHeader"
        android:layout_alignParentBottom="true"
        android:text="@string/statistics_chart" />

</RelativeLayout>