<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/changePassHeaderText"
        style="@style/HeaderTextViewTheme"
        android:text="@string/change_password" />

    <TextView
        android:id="@+id/changeCurrentPassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/change_current_pass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/changeCurrentPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/registration_fragment_edit_text_margin"
        android:background="@mipmap/substrate"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/changeNewPassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/change_new_pass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/changeNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/registration_fragment_edit_text_margin"
        android:background="@mipmap/substrate"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/changeNewPassAgainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/change_confirm_new_pass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/changeNewPassAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/registration_fragment_edit_text_margin"
        android:background="@mipmap/substrate"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/changePassSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/submit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/changePassFloActBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            android:clickable="true"
            android:src="@mipmap/ic_undo"
            app:backgroundTint="@color/colorWhite" />
    </FrameLayout>

</LinearLayout>