<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background">

    <TextView
        android:id="@+id/regHeaderText"
        style="@style/HeaderTextViewTheme"
        android:text="@string/registration" />

    <TextView
        android:id="@+id/regEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regHeaderText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/registration_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regEmailTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/registration_fragment_edit_text_margin"
        android:background="@mipmap/substrate"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/regPassTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/registration_pass"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/regPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regPassTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/registration_fragment_edit_text_margin"
        android:background="@mipmap/substrate"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/regPassAgainTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/registration_pass_again"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <EditText
        android:id="@+id/regPassAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regPassAgainTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/registration_fragment_edit_text_margin"
        android:background="@mipmap/substrate"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/registrationSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/regPassAgain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/registration_fragment_text_view_margin_top"
        android:text="@string/submit"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorWhite" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/registrationFloActBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:src="@mipmap/ic_undo"
        app:backgroundTint="@color/colorWhite" />

</RelativeLayout>